tests/integration/snapshots/integration__parse_failure__double_quote.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
"
stderr ---
error: expected closing quote
 --> stdin:1:1
  |
1 | "
  | ^
  | |
  | opening quote found here
  |
help: insert the missing closing quote
  |
1 | ""
  |  +
